<resources>
    <string name="app_name">Shoe Store</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>

    <!-- Strings related to welcome page -->
    <string name="welcome_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Praesent erat ex, mattis quis magna vitae, semper ultricies nunc. Etiam ornare in
        nulla a commodo. Nam in sodales neque, vel congue lorem. Donec gravida, risus sit
        amet auctor lacinia, orci arcu tristique enim, pharetra tempus diam nunc nec dolor.
        Mauris suscipit libero quam, bibendum interdum purus semper id. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Praesent erat ex, mattis quis magna vitae, semper ultricies
        nunc. Etiam ornare innulla a commodo. Nam in sodales neque, vel congue lorem. Donec gravida,
        risus sitamet auctor lacinia, orci arcu tristique enim, pharetra tempus diam nunc nec dolor.
        Mauris suscipit libero quam, bibendum interdum purus semper id.
    </string>
    <string name="next_btn_welcome">Next</string>

    <!-- Strings related to instructions page -->
    <string name="instructions_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Praesent erat ex, mattis quis magna vitae, semper ultricies nunc.
        Etiam ornare in nulla a commodo. Nam in sodales neque, vel congue lorem. Donec gravida,
        risus sit amet auctor lacinia, orci arcu tristique enim, pharetra tempus diam nunc nec
        dolor. Mauris suscipit libero quam, bibendum interdum purus semper id.</string>
    <string name="next_btn_instructions">Next</string>

    <!-- Strings related to shoe listing page -->
    <string name="fab_content_desc">+</string>
    <string name="shoe_name">Name: %1$s</string>
    <string name="shoe_company"><b>Brand:</b> %1$s</string>
    <string name="shoe_size"><b>Size:</b> %1$s</string>
    <string name="shoe_description"><b>Description:</b> %1$s</string>
    <string name="logout">Log out</string>
    <string name="shoe_name_hint">Model</string>
    <string name="company_hint">Brand</string>
    <string name="size_hint">Size</string>
    <string name="description_hint">Description</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>

</resources>
