<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- I'm using ConstraintLayout because it's flexible and easy to position my views relative
     to each other-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_constraint"
        tools:context=".LoginFragment"
        style="@style/login_constraint_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_textInputLayout"
            style="@style/username_textInputLayout"
            android:hint="@string/username_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_textInputEditText"
                style="@style/login_editText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textInputLayout"
            style="@style/password_textInputLayout"
            android:hint="@string/password_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_textInputEditText"
                style="@style/login_editText" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_textInputLayout"
            app:layout_constraintVertical_bias="@dimen/vertical_bias"
            style="@style/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
