<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- I'm using ConstraintLayout because it's flexible and easy to position my views relative
     to each other -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/shoe_name_details_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_textInputLayout"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:ems="@dimen/number_ems"
                android:hint="@string/shoe_name_hint"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/shoe_name_details_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={shoe.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/company_details_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_textInputLayout"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:ems="@dimen/number_ems"
                android:hint="@string/company_hint"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_details_textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company_details_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={shoe.company}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/size_details_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_textInputLayout"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:ems="@dimen/number_ems"
                android:hint="@string/size_hint"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/company_details_textInputLayout">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/size_details_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="@={shoe.size}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_details_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/width_textInputLayout"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:ems="@dimen/number_ems"
                android:hint="@string/description_hint"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/size_details_textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_details_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={shoe.description}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_btn_details"
                style="@style/save_btn_details"
                android:text="@string/save_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/cancel_btn_details"
                app:layout_constraintTop_toBottomOf="@+id/description_details_textInputLayout" />

            <Button
                android:id="@+id/cancel_btn_details"
                style="@style/cancel_btn_details"
                android:text="@string/cancel_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_btn_details"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/description_details_textInputLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>